--- a/index.html
+++ b/index.html
@@ -5,6 +5,6 @@
         <title>Learning Assistant</title>
     </head>
     <body>
-        <h1>Hin</h1>
+        <h1>Learning Assistant</h1>
     </body>
 </html>
