--- a/index.html
+++ b/index.html
@@ -2,9 +2,14 @@
 <html lang="ja">
     <head>
         <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Learning Assistant</title>
     </head>
     <body>
-        <h1>Learning Assistant</h1>
+        <div >
+            <h1>Learning Assistant</h1>
+            <h3>For Tsukukoma or Tetsuryoku Students</h3>
+            <h4>Made by milliest0404</h4>
+        </div>
     </body>
 </html>
