--- a/index.html
+++ b/index.html
@@ -7,10 +7,10 @@
         <title>Learning Assistant</title>
     </head>
     <body>
-        <div>
-            <h1>Learning Assistant</h1>
-            <h3>For Tsukukoma or Tetsuryoku Students</h3>
-            <h4>Made by milliest0404</h4>
+        <div id="headline">
+            <h1 id="headline1">Learning Assistant</h1>
+            <h3 id="headline2">For Tsukukoma or Tetsuryoku Students</h3>
+            <h4 id="headline3">Made by milliest0404</h4>
         </div>
     </body>
 </html>
