--- a/index.html
+++ b/index.html
@@ -9,9 +9,16 @@
     </head>
     <body>
         <div id="headline">
-            <h1 id="headline1">Learning Assistant</h1>
-            <h2 id="headline2">For Tsukukoma or Tetsuryoku Students</h2>
-            <h3 id="headline3">Made by milliest0404</h3>
+            <div class="for-pc">
+                <h1 id="hl1-pc">Learning Assistant</h1>
+                <h2 id="hl2-pc">For Tsukukoma or Tetsuryoku Students</h2>
+                <h3 id="hl3-pc">Made by milliest0404</h3>
+            </div>
+            <div class="for-sp">
+                <h1 id="hl1-sp">Learning Assistant</h1>
+                <h2 id="hl2-sp">For Tsukukoma or Tetsuryoku Students</h2>
+                <h3 id="hl3-sp">Made by milliest0404</h3>
+            </div>
         </div>
     </body>
 </html>
