--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link href="image/icon.png" rel="icon">
         <link href="style/pc/style.css" media="(min-width: 768px)" rel="stylesheet">
         <link href="style/sp/style.css" media="(max-width: 767px)" rel="stylesheet">
         <link href="https://unpkg.com/ress/dist/ress.min.css" rel="stylesheet">
