--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="ja">
     <head>
         <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <meta content="width=device-width, initial-scale=1.0" name="viewport">
         <link href="image/icon.png" rel="icon">
         <link href="style/pc/style.css" media="(min-width: 768px)" rel="stylesheet">
         <link href="style/sp/style.css" media="(max-width: 767px)" rel="stylesheet">
@@ -10,6 +10,11 @@
         <title>Learning Assistant</title>
     </head>
     <body>
+        <header>
+            <a href="index.html">
+                <img id="logo" src="image/logo.png">
+            </a>
+        </header>
         <div id="headline">
             <h1 id="headline1">Learning Assistant</h1>
             <h2 id="headline2">For Tsukukoma or Tetsuryoku Students</h2>
