--- a/index.html
+++ b/index.html
@@ -20,5 +20,6 @@
             <h2 id="headline2">For Tsukukoma or Tetsuryoku Students</h2>
             <h3 id="headline3">Made by milliest0404</h3>
         </div>
+        <div id="start"></div>
     </body>
 </html>
