--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
                 <img id="logo" src="image/logo.png">
             </a>
         </header>
+        <div id="header-bottom"></div>
         <div id="headline">
             <h1 id="headline1">Learning Assistant</h1>
             <h2 id="headline2">For Tsukukoma or Tetsuryoku Students</h2>
