--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
         <link href="style/pc/style.css" media="(min-width: 768px)" rel="stylesheet">
         <link href="style/sp/style.css" media="(max-width: 767px)" rel="stylesheet">
         <link href="https://unpkg.com/ress/dist/ress.min.css" rel="stylesheet">
-        <title>Learning Assistant</title>
+        <title>Learning Assistant - HOME</title>
     </head>
     <body>
         <header>
