--- a/index.html
+++ b/index.html
@@ -4,8 +4,7 @@
         <meta charset="UTF-8">
         <meta content="width=device-width, initial-scale=1.0" name="viewport">
         <link href="image/icon.png" rel="icon">
-        <link href="style/pc/style.css" media="(min-width: 768px)" rel="stylesheet">
-        <link href="style/sp/style.css" media="(max-width: 767px)" rel="stylesheet">
+        <link href="style/style.css" rel="stylesheet">
         <link href="https://unpkg.com/ress/dist/ress.min.css" rel="stylesheet">
         <title>Learning Assistant - HOME</title>
     </head>
