--- a/index.html
+++ b/index.html
@@ -13,6 +13,18 @@
             <a href="index.html">
                 <img id="logo" src="image/logo.png">
             </a>
+            <div class="responsive-button">
+                <div class="menu-line"></div>
+                <div class="menu-line"></div>
+                <div class="menu-line"></div>
+            </div>
+            <nav class="navigation">
+                <ul class="navigation-list">
+                    <li>
+                        <a class="navigation-link" href="page/guide.html">GUIDE</a>
+                    </li>
+                </ul>
+            </nav>
         </header>
         <div id="header-bottom"></div>
         <div id="headline">
