--- a/index.html
+++ b/index.html
@@ -23,6 +23,9 @@
                     <li>
                         <a class="navigation-link" href="page/guide.html">GUIDE</a>
                     </li>
+                    <li>
+                        <a class="navigation-link" href="">PRINT</a>
+                    </li>
                 </ul>
             </nav>
         </header>
