--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
         <link href="image/icon.png" rel="icon">
         <link href="style/style.css" rel="stylesheet">
         <link href="https://unpkg.com/ress/dist/ress.min.css" rel="stylesheet">
+        <script src="script/script.js"></script> 
         <title>Learning Assistant - HOME</title>
     </head>
     <body>
