--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
             <a href="index.html">
                 <img id="logo" src="image/logo.png">
             </a>
-            <div class="responsive-button">
+            <div class="responsive-button" onclick="showMenu()">
                 <div class="menu-line"></div>
                 <div class="menu-line"></div>
                 <div class="menu-line"></div>
