--- a/index.html
+++ b/index.html
@@ -14,6 +14,14 @@
             <a href="index.html">
                 <img id="logo" src="image/logo.png">
             </a>
+            <ul class="header-list">
+                <li class="header-list-item">
+                    <a class="header-list-link" href="page/guide.html">GUIDE</a>
+                </li>
+                <li class="header-list-item">
+                    <a class="header-list-link" href="page/print.html">PRINT</a>
+                </li>
+            </ul>
         </header>
         <div id="header-bottom"></div>
         <div id="headline">
