--- a/index.html
+++ b/index.html
@@ -14,7 +14,9 @@
             <a href="index.html">
                 <img id="logo" src="image/logo.png">
             </a>
-            <ul class="header-list">
+            <input type="checkbox" name="hamburger" id="hamburger" class="hamburger-input"/>
+            <label for="hamburger" class="hamburger-bg"></label>
+            <ul class="header-list hamburger-list">
                 <li class="header-list-item">
                     <a class="header-list-link" href="page/guide.html">GUIDE</a>
                 </li>
@@ -22,6 +24,11 @@
                     <a class="header-list-link" href="page/print.html">PRINT</a>
                 </li>
             </ul>
+            <label for="hamburger" class="hamburger-button">
+                <span class="hamburger-button-mark"></span>
+                <span class="hamburger-button-mark"></span>
+                <span class="hamburger-button-mark"></span>
+            </label>
         </header>
         <div id="header-bottom"></div>
         <div id="headline">
