--- a/index.html
+++ b/index.html
@@ -26,9 +26,9 @@
         <input type="checkbox" name="hamburger" id="hamburger" class="hamburger-input"/>
         <label for="hamburger" class="hamburger-bg"></label>
         <label for="hamburger" class="hamburger-button">
-            <span class="hamburger-button-mark" id="mark1"></span>
-            <span class="hamburger-button-mark" id="mark2"></span>
-            <span class="hamburger-button-mark" id="mark3"></span>
+            <span class="hamburger-button-mark"></span>
+            <span class="hamburger-button-mark"></span>
+            <span class="hamburger-button-mark"></span>
         </label>
         <div id="header-bottom"></div>
         <div id="headline">
